# qiskit_scratch

./: README.md  pyproject.toml
qiskit_scratch/: qiskit_scratch.ipynb
