[tool.poetry]
name = "qiskit-scratch"
version = "0.1.0"
description = "This repo saves Jupyter notebooks containing scratch work for following along with tutorials for Qiskit Python package to practice quantum computing."
authors = ["Paul Fischer"]
license = "MIT"
readme = "README.md"
packages = [{include = "qiskit_scratch"}]

[tool.poetry.dependencies]
matplotlib = "^3.10"
notebook = "^7.3.2"
numpy = "^2.2.0"
pylatexenc = "^2.10"
python = "^3.11"
python-dotenv = "^1.0.1"
qiskit = { version = "^1.3.1", extras = ["visualization"] }
qiskit_aer = "^0.15.0"
qiskit_ibm_runtime = "^0.34.0"
rustworkx = "^0.15.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
